Simplify API (#14)
* Add '/v1/wallets/deposit' endpoint
* Remove 'POST /v1/wallets' endpoint
* Update OpenAPI spec
